Implement the backend side of the connection data api
